fix(Table): force left align table header
- which defaults to center on Safari

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -65,6 +65,7 @@
 .table thead th {
   border-width: 1px;
   border-color: $neutral-24;
+  text-align: left;
 }
 .table th,
 .table td {
